--- a/app_registry.yaml
+++ b/app_registry.yaml
@@ -68,12 +68,16 @@ services:
       - key: DEFAULT_WEBHOOK_URL
         value: "https://mbcrc.app.n8n.cloud/webhook/530ec5fa-656a-4c9c-bb05-5be7ff3bdef2"
 
-      # Sensitive environment variables (will be replaced by GitHub Actions)
+      # Sensitive environment variables using Digital Ocean secrets
+      # These should be configured in the Digital Ocean App Platform settings
       - key: SUPABASE_URL
-        value: "${SUPABASE_URL}"
+        type: SECRET
+        value: SUPABASE_URL
 
       - key: SUPABASE_KEY
-        value: "${SUPABASE_KEY}"
+        type: SECRET
+        value: SUPABASE_KEY
 
       - key: ADMIN_EMAIL
-        value: "${ADMIN_EMAIL}"
+        type: SECRET
+        value: ADMIN_EMAIL
