created a search Researcher function on the streamlit interface

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -9,6 +9,12 @@ SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJ
 # Admin email for first-time setup
 ADMIN_EMAIL = "nanvenfaden@gmail.com"
 
+[neo4j]
+NEO4J_URI = "neo4j+s://87e196fc.databases.neo4j.io"
+NEO4J_USERNAME = "neo4j"
+NEO4J_PASSWORD = "JowDt6F_7RoEhmLd8IYCpXdUkUbhvSbPjOhHsTehJkY"
+NEO4J_DATABASE = "neo4j"
+
 [app]
 # Application settings
 APP_NAME = "app.py"
