--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,12 +47,41 @@ jobs:
           find . -name "*.py" -path "./utils/*" -exec python -m py_compile {} \;
           find . -name "*.py" -path "./components/*" -exec python -m py_compile {} \;
 
-      - name: Test Docker build
+      - name: Test Docker build and connections
         run: |
+          echo "=== Building Docker image ==="
           docker build -t test-image .
-          docker run --rm --name test-container -d test-image
-          sleep 10
+
+          echo "=== Testing connections in container ==="
+          docker run --rm \
+            -e SUPABASE_URL="${{ secrets.SUPABASE_URL }}" \
+            -e SUPABASE_KEY="${{ secrets.SUPABASE_KEY }}" \
+            -e ADMIN_EMAIL="${{ secrets.ADMIN_EMAIL }}" \
+            -e DEFAULT_WEBHOOK_URL="https://mbcrc.app.n8n.cloud/webhook/530ec5fa-656a-4c9c-bb05-5be7ff3bdef2" \
+            test-image python test_connections.py
+
+          echo "=== Testing container startup ==="
+          docker run --rm --name test-container -d \
+            -e STREAMLIT_SERVER_PORT=8501 \
+            -e STREAMLIT_SERVER_ADDRESS=0.0.0.0 \
+            -e STREAMLIT_SERVER_HEADLESS=true \
+            -e SUPABASE_URL="${{ secrets.SUPABASE_URL }}" \
+            -e SUPABASE_KEY="${{ secrets.SUPABASE_KEY }}" \
+            -e ADMIN_EMAIL="${{ secrets.ADMIN_EMAIL }}" \
+            test-image
+
+          sleep 15
+
+          echo "=== Checking container health ==="
+          docker exec test-container curl -f http://localhost:8501/_stcore/health || {
+            echo "Container health check failed"
+            docker logs test-container
+            docker stop test-container
+            exit 1
+          }
+
           docker stop test-container || true
+          echo "✅ All container tests passed"
 
   # Build and push Docker image
   build:
